tests/e2e/semantics/foreach_invalid3.error
Error: syntax error in story at line 4, column 9

4|        b = b + elem
              ^^^^^^^^

E0103: `+` between `int` and `string` is not supported.
