tests/e2e/semantics/foreach_invalid3.story
b = 0

foreach {"1": 2} as elem
    b = b + elem
